GL-7 [Sirius][Sequence] Add Tests for Comment and Constraint
Tests for Creation tools and Graphical Drag and Drop tools has been
created.

Bug: https://gitlab.eclipse.org/eclipse/papyrus/org.eclipse.papyrus-desktop/-/issues/7
Signed-off-by: Glenn Plouhinec <glenn.plouhinec@obeo.fr>