@@ -13,8 +13,6 @@
  *****************************************************************************/
 package org.eclipse.papyrus.sirius.uml.diagram.sequence.tests.creation.subnodes;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 
@@ -27,6 +25,7 @@ import org.eclipse.papyrus.sirius.junit.util.diagram.AbstractCreateNodeTests;
 import org.eclipse.papyrus.sirius.junit.utils.diagram.creation.checker.SemanticAndGraphicalCreationChecker;
 import org.eclipse.papyrus.sirius.junit.utils.diagram.creation.graphical.checker.DNodeCreationChecker;
 import org.eclipse.papyrus.sirius.junit.utils.diagram.creation.semantic.checker.SemanticNodeCreationChecker;
+import org.eclipse.papyrus.sirius.uml.diagram.sequence.tests.ContainmentFeatureHelper;
 import org.eclipse.papyrus.sirius.uml.diagram.sequence.tests.CreationToolsIds;
 import org.eclipse.papyrus.sirius.uml.diagram.sequence.tests.MappingTypes;
 import org.eclipse.sirius.diagram.DDiagram;
@@ -34,8 +33,9 @@ import org.eclipse.sirius.viewpoint.DSemanticDecorator;
 import org.eclipse.uml2.uml.ActionExecutionSpecification;
 import org.eclipse.uml2.uml.BehaviorExecutionSpecification;
 import org.eclipse.uml2.uml.Element;
+import org.eclipse.uml2.uml.ExecutionSpecification;
 import org.eclipse.uml2.uml.Interaction;
-import org.eclipse.uml2.uml.UMLPackage;
+import org.eclipse.uml2.uml.Lifeline;
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -43,19 +43,23 @@ import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameters;
 
 /**
- * This class groups all tests about element creation as sub-nodes of the Sequence Diagram represented by an {@link Interaction}.
+ * This class groups all tests about element creation as sub-nodes on a {@link Lifeline} of the Sequence Diagram represented by an {@link Interaction}.
  * 
  * @author <a href="mailto:gwendal.daniel@obeosoft.com">Gwendal Daniel</a>
  */
 @PluginResource("resources/creation/subNodes/SubNodes_CreationTest.di")
 @RunWith(value = Parameterized.class)
-public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
+public class SDCreateSubNodesOnLifelineTest extends AbstractCreateNodeTests {
 
 	private static final String DIAGRAM_NAME = "SubNodes_SequenceDiagramSirius"; //$NON-NLS-1$
 
 	private static final String INTERACTION_NAME = "Interaction"; //$NON-NLS-1$
 
+	private static final String EXECUTION_SPECIFICATION = ExecutionSpecification.class.getSimpleName();
+
 	private static final String LIFELINE_NAME = "Lifeline1"; //$NON-NLS-1$
+
+	private static final String LIFELINE_EXECUTION = "Lifeline_Execution"; //$NON-NLS-1$
 
 	private final String creationToolId;
 
@@ -71,10 +75,10 @@ public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
 	 * Constructor.
 	 * 
 	 */
-	public SDCreateSubNodesOnSequenceTest(String creationToolId, String nodeMappingType, EReference containmentFeature, Class<? extends Element> expectedType) {
-		this.creationToolId = creationToolId;
-		this.nodeMappingType = nodeMappingType;
-		this.containmentFeature = containmentFeature;
+	public SDCreateSubNodesOnLifelineTest(Class<? extends Element> expectedType) {
+		this.creationToolId = CreationToolsIds.getCreationToolId(expectedType);
+		this.nodeMappingType = MappingTypes.getMappingType(expectedType);
+		this.containmentFeature = ContainmentFeatureHelper.getContainmentFeature(expectedType);
 		this.expectedType = expectedType;
 	}
 
@@ -87,7 +91,7 @@ public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
 	protected EObject getTopGraphicalContainer() {
 		final DDiagram ddiagram = getDDiagram();
 		Element owner;
-		if (MappingTypes.EXECUTION_SPECIFICATION_NODE_TYPE.equals(this.nodeMappingType)) {
+		if (MappingTypes.getMappingType(EXECUTION_SPECIFICATION).equals(this.nodeMappingType)) {
 			// The graphical owner of an Execution is the lifeline, even if the semantic owner is the Interaction.
 			owner = ((Interaction) getSemanticOwner()).getMember(LIFELINE_NAME);
 
@@ -108,17 +112,17 @@ public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
 	}
 
 	@Override
-	protected boolean applyCreationTool(String creationToolId, DDiagram diagram, EObject graphicalContainer) {
-		if (nodeMappingType.equals(MappingTypes.EXECUTION_SPECIFICATION_NODE_TYPE)) {
-			return fixture.applyNodeCreationToolFromPalette(creationToolId, diagram, graphicalContainer, new Point(1, 1000), null);
+	protected boolean applyCreationTool(String toolId, DDiagram diagram, EObject graphicalContainer) {
+		if (nodeMappingType.equals(MappingTypes.getMappingType(EXECUTION_SPECIFICATION))) {
+			return fixture.applyNodeCreationToolFromPalette(toolId, diagram, graphicalContainer, new Point(1, 1000), null);
 		}
-		return super.applyCreationTool(creationToolId, diagram, graphicalContainer);
+		return super.applyCreationTool(toolId, diagram, graphicalContainer);
 	}
 
 	@Test
 	@ActiveDiagram(DIAGRAM_NAME)
 	public void createNodeIntoLifeline() {
-		createNodeIntoContainer(INTERACTION_NAME, MappingTypes.EXECUTION_SPECIFICATION_NODE_TYPE, MappingTypes.LIFELINE_EXECUTION_NODE_TYPE);
+		createNodeIntoContainer(INTERACTION_NAME, MappingTypes.getMappingType(EXECUTION_SPECIFICATION), MappingTypes.getMappingType(LIFELINE_EXECUTION));
 	}
 
 	private void createNodeIntoContainer(final String ownerName, final String nodeContainerType, final String nodeCompartmentContainerType) {
@@ -128,8 +132,8 @@ public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
 		SemanticNodeCreationChecker semanticChecker = new SemanticNodeCreationChecker(getSemanticOwner(), this.containmentFeature, this.expectedType);
 		DNodeCreationChecker graphicalChecker = new DNodeCreationChecker(getDiagram(), graphicalContainer, this.nodeMappingType);
 		List<String> executionSpecificationTools = List.of(//
-				CreationToolsIds.CREATE_ACTION_EXECUTION_SPECIFICATION_TOOL //
-				, CreationToolsIds.CREATE_BEHAVIOR_EXECUTION_SPECIFICATION_TOOL);
+				CreationToolsIds.getCreationToolId(ActionExecutionSpecification.class) //
+				, CreationToolsIds.getCreationToolId(BehaviorExecutionSpecification.class));
 		if (executionSpecificationTools.contains(this.creationToolId)) {
 			semanticChecker.setExpectedCreatedElements(3); // ExecutionSpecification creation tools create 3 semantic elements in the same containment reference: the
 															// ExecutionSpecification itself plus the OccurrenceSpecification representing the start/finish of the execution.
@@ -141,10 +145,7 @@ public class SDCreateSubNodesOnSequenceTest extends AbstractCreateNodeTests {
 	}
 
 	@Parameters(name = "{index} Test {0} tool")
-	public static Collection<Object[]> data() {
-		return Arrays.asList(new Object[][] {
-				{ CreationToolsIds.CREATE_ACTION_EXECUTION_SPECIFICATION_TOOL, MappingTypes.EXECUTION_SPECIFICATION_NODE_TYPE, UMLPackage.eINSTANCE.getInteraction_Fragment(), ActionExecutionSpecification.class },
-				{ CreationToolsIds.CREATE_BEHAVIOR_EXECUTION_SPECIFICATION_TOOL, MappingTypes.EXECUTION_SPECIFICATION_NODE_TYPE, UMLPackage.eINSTANCE.getInteraction_Fragment(), BehaviorExecutionSpecification.class }
-		});
+	public static List<Class<? extends Element>> data() {
+		return List.of(ActionExecutionSpecification.class, BehaviorExecutionSpecification.class);
 	}
 }
